--- a/src/main/webapp/WEB-INF/header.jspf
+++ b/src/main/webapp/WEB-INF/header.jspf
@@ -18,14 +18,8 @@
         <div class="container" style="margin-top: 28px;">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" style="color: #ffffff;margin-left: -372px;" href="index.html">Assignment 2 - MP2</a>
+   
+                <a class="navbar-brand" style="color: #ffffff;margin-left: -372px;" href="home">Assignment 2 - MP2</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
